# dnssector

./: Cargo.toml  LICENSE  README.md
.github/workflows/: shiftleft-analysis.yml
fuzz/: Cargo.toml
fuzz/corpus/fuzzer_script_1/: 0000  0001  0002  0003  0004  0005  0006  0007  0008  0009  000a
fuzz/corpus/fuzzer_script_rename/: 1
fuzz/corpus/fuzzer_script_rename_2/: 2  3
fuzz/corpus/fuzzer_script_synth/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  4  5  6  7  8  9
fuzz/fuzzers/: fuzzer_script_1.rs  fuzzer_script_op.rs  fuzzer_script_rename.rs  fuzzer_script_rename_2.rs  fuzzer_script_synth.rs
src/: c_abi.rs  compress.rs  constants.rs  dns_sector.rs  edns_iterator.rs  errors.rs  lib.rs  parsed_packet.rs  question_iterator.rs  renamer.rs  response_iterator.rs  rr_iterator.rs
src/synth/: gen.rs  mod.rs  parser.rs
tests/: lib.rs  test_dnssector.rs  test_synth.rs
