[package]
name = "dnssector"
version = "0.1.4"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A very fast library to parse, validate, create and mangle DNS packets"
license = "ISC"
edition = "2018"
homepage = "https://github.com/jedisct1/dnssector"
repository = "https://github.com/jedisct1/dnssector"

[dependencies]
anyhow = "1"
byteorder = "1"
chomp = "0.3"
debug_stub_derive = "0.3"
hex = "0.4"
libc = "0.2"
libloading = "0.5"
rand = "0.7"
thiserror = "1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
