[package]
name = "dnssector"
version = "0.2.2"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A very fast library to parse, validate, create and mangle DNS packets"
license = "ISC"
edition = "2018"
homepage = "https://github.com/jedisct1/dnssector"
repository = "https://github.com/jedisct1/dnssector"

[dependencies]
anyhow = "1"
byteorder = "1"
chomp = "0.3"
hex = "0.4"
libc = "0.2"
libloading = { version = "0.6", optional = true }
rand = "0.8"
thiserror = "1"

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[features]
hooks = [ "libloading" ]
default = [ ]
