[package]
name = "dnssector"
version = "0.2.13"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A very fast library to parse, validate, create and mangle DNS packets"
license = "ISC"
edition = "2018"
homepage = "https://github.com/jedisct1/dnssector"
repository = "https://github.com/jedisct1/dnssector"

[dependencies]
anyhow = "1"
byteorder = "1"
chomp = { package = "chomp1", version = "0.3" }
hex = "0.4"
libc = "0.2"
libloading = { version = "0.8", optional = true }
rand = "0.8"
thiserror = "2"

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[features]
hooks = [ "libloading" ]
default = [ ]
